--- a/assets/sass/project/ferret/globals/_mixins.scss
+++ b/assets/sass/project/ferret/globals/_mixins.scss
@@ -176,7 +176,7 @@
 @mixin background-image($image, $extension: jpg, $width: 100%, $height: 100%) {
 	background-image: url(#{$image}.#{$extension});
 	
-	@media #{$retina} {
+	@include media(retina) {
 		background: {
 			image: url(#{$image}@2x.#{$extension});
 			size: $width $height;
@@ -221,17 +221,51 @@
 }
 
 
-// Media Queries for Mobile First Design
-$mobile: '(max-width: 599px)'; // Only Phone
-$small-tablet: '(min-width: 600px)';
-$tablet: '(min-width: 768px)';
-$device: '(max-width: 959px)'; // All Devices
-$desktop: '(min-width: 960px)';
-$large-desktop: '(min-width: 1280px)';
-$retina: '(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)'; // Only Retina Screens
-
-
-// Media Queries to Target Device Only
-$small-tablet-only: '(min-width: 600px) and (max-width: 767px)';
-$tablet-only: '(min-width: 768px) and (max-width: 959px)';
-$desktop-only: '(min-width: 960px) and (max-width: 1279px)';
+// Media Query Mixin
+@mixin media($screen) {
+	@if $screen == phone {
+		@media (max-width: $phone) {
+			@content;
+		}
+	}
+	@else if $screen == small-tablet {
+		@media (min-width: $small-tablet) {
+			@content;
+		}
+	}
+	@else if $screen == tablet {
+		@media (min-width: $tablet) {
+			@content;
+		}
+	}
+	@else if $screen == only-tablet {
+		@media (min-width: $tablet) and (max-width: $device) {
+			@content;
+		}
+	}
+	@else if $screen == device {
+		@media (max-width: $device) {
+			@content;
+		}
+	}
+	@else if $screen == desktop {
+		@media (min-width: $desktop) {
+			@content;
+		}
+		@if $ie8-support == true {
+			.ie8 & {
+				@content;
+			}
+		}
+	}
+	@else if $screen == large-desktop {
+		@media (min-width: $large-desktop) {
+			@content;
+		}
+	}
+	@else if $screen == retina {
+		@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+			@content;
+		}
+	}
+}
