better ie support

--- a/assets/sass/project/ferret/globals/_mixins.scss
+++ b/assets/sass/project/ferret/globals/_mixins.scss
@@ -252,7 +252,7 @@
 		@media (min-width: $desktop) {
 			@content;
 		}
-		@if $ie8-support == true {
+		@if $ie8-support {
 			.ie8 & {
 				@content;
 			}
