code clean up, a few changes to modifier class names

--- a/assets/sass/project/ferret/shared/_base.scss
+++ b/assets/sass/project/ferret/shared/_base.scss
@@ -41,14 +41,15 @@ button {
 	outline: none;
 }
 
-.bold,
 b,
+.bold,
 strong {
 	font-weight: bold;
 }
 
-.italic,
-i {
+i,
+em,
+.italic {
 	font-style: italic;
 }
 
