added weight argument to font-styles mixin

--- a/assets/sass/project/ferret/globals/_mixins.scss
+++ b/assets/sass/project/ferret/globals/_mixins.scss
@@ -206,9 +206,9 @@
 	}	
 }
 
-@mixin font-styles {
+@mixin font-styles($weight: normal) {
 	font: {
-		weight: normal;
+		weight: $weight;
 		style: normal;
 	}
 }
