--- a/assets/sass/project/ferret/components/variables/_buttons-variables.scss
+++ b/assets/sass/project/ferret/components/variables/_buttons-variables.scss
@@ -8,3 +8,6 @@ $button-bg-alt: $blue;
 $button-submit: $red;
 $button-hover: #353535;
 $button-height: 40px;
+
+$button-text-shadow: true;
+$button-drop-shadow: true;
