--- a/assets/sass/project/ferret/globals/_mixins.scss
+++ b/assets/sass/project/ferret/globals/_mixins.scss
@@ -82,11 +82,11 @@
 
 // Keyframes
 @mixin keyframes($name) {
-	@-webkit-keyframes $name {
+	@-webkit-keyframes #{$name} {
 		@content;
 	}
 	
-	@keyframes $name {
+	@keyframes #{$name} {
 		@content;
 	}
 }
